<resources>
    <string name="app_name">Video Player</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="folder_name_title">Folder Name</string>
    <string name="folder_path">Folder Path</string>
    <string name="no_of_files_default">2 Files</string>
    <string name="time_text">04:12</string>
    <string name="size">4MB</string>
    <string name="search">Search</string>
    <string name="refresh_menuItem">Refresh</string>
    <string name="sort_by">Sort By</string>
    <string name="this_is_title_of_video">this is title of video</string>
    <string name="channel_name">Channel-Name</string>
    <string name="channel_description">Channel_description</string>

</resources>