<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="5dp"
    android:background="@drawable/ic_box"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/folder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/folderName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/popins_medium"
                android:maxLines="1"
                android:text="@string/folder_name_title"
                android:textColor="#333333"
                android:textSize="13dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/folderPath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/folder_path"
                android:textColor="@color/list_item_textColor2"
                android:textSize="17sp"
                android:textStyle="italic"
                android:visibility="gone" />

            <TextView
                android:id="@+id/noOfFiles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/popins_regular"
                android:text="@string/no_of_files_default"
                android:textColor="#333333"
                android:textSize="11dp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>