<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_70sdp"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="5dp"
    android:background="@drawable/ic_box"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/thumbnail_card"
        android:layout_width="112dp"
        android:layout_height="70dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/gry"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_play" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="30dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/duration_bg"
                android:visibility="gone" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@+id/media_menu_more"
        android:layout_toEndOf="@+id/thumbnail_card"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/media_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/popins_medium"
            android:maxLines="1"
            android:text="@string/folder_name_title"
            android:textColor="#333333"
            android:textSize="13dp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/popins_regular"
                android:text="Duration:  "
                android:textColor="#333333"
                android:textSize="10dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/media_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/time_text"
                android:textColor="#929292"
                android:textSize="9sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/popins_regular"
                android:text="Size:  "
                android:textColor="#333333"
                android:textSize="10dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/media_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/popins_regular"
                android:text="@string/size"
                android:textColor="#929292"
                android:textSize="9dp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/media_menu_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="10dp"
        android:src="@drawable/more" />
</RelativeLayout>
